package net.proselyte.basepatterns.structural.composite;

public class Project {
    public static void main(String[] args) {
        Team team = new Team();

        team.createProject();
    }
}
