package net.proselyte.basepatterns.structural.proxy;

public class RealProject {
    private String url;

    public RealProject(String url) {
        this.url = url;
        load();
    }

    public void load() {
        System.out.println("Loading project from " + url + "...");
    }
}
